--- a/Assignment#1/hello.html
+++ b/Assignment#1/hello.html
@@ -11,7 +11,7 @@
 		  Douglas Monteiro
 	  </h1>
 	  
-	  <img id="PorfilePic" src="Assignment#1/PorfilePic.jpg" alt="DouglasMonteiro">
+	  <img id="PorfilePic" src="PorfilePic.jpg" alt="DouglasMonteiro">
 	  
 	  <h2>
 		  Graphic Design, class of '16
