--- a/Assignment#1/hello.html
+++ b/Assignment#1/hello.html
@@ -2,8 +2,8 @@
 <html>
   <head>
 	  <title>Douglas Monteiro</title>
-	  <link rel="stylesheet" type="text/css" href="reset.css"/>
-  	  <link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
+	  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+  	 
   </head>
   
   <body id="body">
