--- a/CSS3_robot/Robo.html
+++ b/CSS3_robot/Robo.html
@@ -3,18 +3,15 @@
 	<!DOCTYPE html>
 	<html>
 	<head>
-		<title>Douglas Monteiro</title>
+		<title>Robo the Robot</title>
 		<link rel="stylesheet" type="text/css" href="Portfolio.css"/>
 		<link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
 	</head>
 
 <body>
-
-<header id="site-header">
-	<div id="header-center">
-
-	</div>
-</header> 
+	<header id="head">
+		
+	</header> 
 	
 </body>
 
