--- a/CSS3_robot/Robo.html
+++ b/CSS3_robot/Robo.html
@@ -4,13 +4,13 @@
 	<html>
 	<head>
 		<title>Robo the Robot</title>
-		<link rel="stylesheet" type="text/css" href="Portfolio.css"/>
+		<link rel="stylesheet" type="text/css" href="Robo.css"/>
 		<link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
 	</head>
 
-<body>
-	<header id="head">
-		<div id="antena"> </div>
+<body class="Robo">
+	<header class="head">
+		<div class="antena"> </div>
 	</header> 
 	
 </body>
