--- a/CSS3_robot/Robo.html
+++ b/CSS3_robot/Robo.html
@@ -10,15 +10,42 @@
 
 <body class="Robo">
 	<header class="head">
-		<div class="antena"> </div>
+		
+		<div class="face">
+			<div class= "eye"> </div> 
+			<div class= "eye-white"> </div>
+			<div class= "eye-pupil"> </div>
+		</div>
+		
+		<div class= "mouth"> 
+			<div class="teeth"></div>
+			<div class="teeth"></div>
+			<div class="teeth"></div>
+			<div class="teeth"></div>
+			<div class="teeth"></div>
+			<div class="teeth"></div>
+		</div>
+		
+		<div class="mustache"></div>
+		<div class="neck"></div>
+
+		<div class="torso"></div>
+		<div class="heart"></div>
+		
+		
+		<div class="left-arm"></div>
+		<div class="right-arm"></div>
+		
+		<div class="left-hand"></div>
+		<div class="right-hand"></div>
+		
+		<div class="left-leg"></div>
+		<div class="right-leg"></div>
+		
+		
+
+
 	</header> 
 	
 </body>
 
-
-
-
-
-		<div id=" ">
-			
-		</div>
