--- a/CSS3_robot/Robo.html
+++ b/CSS3_robot/Robo.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<!DOCTYPE html>
-	<html>
 	<head>
 		<title>Robo the Robot</title>
 		<link rel="stylesheet" type="text/css" href="Robo.css"/>
-		<link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
 	</head>
-
 <body class="Robo">
 	<header class="head">
 		
@@ -48,4 +44,5 @@
 	</header> 
 	
 </body>
+</html>
 
