--- a/JS-pattern/Pattern_1.html
+++ b/JS-pattern/Pattern_1.html
@@ -1,4 +1,10 @@
-<html><body>
+<!DOCTYPE html>
+<html>
+<head>
+	
+	
+</head>
+<body>
 <script src='http://cykod.github.io/Logoish/logoish.js'></script>
 <script>
 Logoish.init();
@@ -22,4 +28,5 @@ for(var x = 0;x < 50000; x++){
 }
 
 </script>
-</body></html>
+</body>
+</html>
