--- a/MassPaint/index.html
+++ b/MassPaint/index.html
@@ -17,8 +17,15 @@
     <button id='button-replay'><span class="fa fa-refresh"></span></button>
     <button id='button-pen' class='selected'><span class="fa fa-pencil"></span></button>
 	<button id='button-eraser'><span class="fa fa-eraser"></span></button>
-	
-	  </div>
+	<button id='button-triangle' class='tool'><span class="fa fa-chevron-up"></span></button>
+	<button id='button-color-tan'><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-blue'><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-green'><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-brown'><span class="fa fa-paint-brush"></span></button>
+	<button id='button-crab' class='tool'><span class="fa fa-bug"></span></button>
+	<button id='button-shape' class='tool'><span class="fa fa-codepen"></span></button>
+	</div>
+	  
   <script src='draw.js'></script>
 </body>
 </html>
