--- a/MassPaint/index.html
+++ b/MassPaint/index.html
@@ -14,16 +14,25 @@
   </script>
   <div class='buttons'>
     <button id='button-save'><span class="fa fa-floppy-o"></span></button>
+
     <button id='button-replay'><span class="fa fa-refresh"></span></button>
+
     <button id='button-pen' class='selected'><span class="fa fa-pencil"></span></button>
+
 	<button id='button-eraser'><span class="fa fa-eraser"></span></button>
+
 	<button id='button-triangle' class='tool'><span class="fa fa-chevron-up"></span></button>
-	<button id='button-color-tan'><span class="fa fa-paint-brush"></span></button>
-	<button id='button-color-blue'><span class="fa fa-paint-brush"></span></button>
-	<button id='button-color-green'><span class="fa fa-paint-brush"></span></button>
-	<button id='button-color-brown'><span class="fa fa-paint-brush"></span></button>
-	<button id='button-crab' class='tool'><span class="fa fa-bug"></span></button>
+	
+	<button id='button-color-tan' class="color" data-color="tan"><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-blue' class="color" data-color="blue"><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-green' class="color" data-color="green"><span class="fa fa-paint-brush"></span></button>
+	<button id='button-color-brown' class="color" data-color="brown"><span class="fa fa-paint-brush"></span></button>
+
 	<button id='button-shape' class='tool'><span class="fa fa-codepen"></span></button>
+
+	<button id='button-plus' class='tool'><span class="fa fa-plus"></span></button>
+	
+	<button id='button-minus' class='tool'><span class="fa fa-minus"></span></button>	
 	</div>
 	  
   <script src='draw.js'></script>
