--- a/Instagram /index.html
+++ b/Instagram /index.html
@@ -11,7 +11,7 @@
     </div>
     
     <script src='https://code.jquery.com/jquery-2.1.3.min.js'></script>
-    <script src='draw.js'></script>
+    <script src='instagram.js'></script>
   </body>
   
 </html>
