--- a/Website/index.html
+++ b/Website/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<!DOCTYPE html>
-	<html>
 	<head>
-		<title>Monteiro&ampSons'</title>
+		<title>Monteiro&amp;Sons'</title>
 		<link rel="stylesheet" type="text/css" href="Portfolio.css"/>
 		<link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
 	</head>
@@ -13,7 +12,7 @@
 	<header id="site-header">
 		<div id="header-center">
 			<div id="name">
-			  <a href="index.html">Monteiro & Sons'</a>
+			  <a href="index.html">Monteiro &amp; Sons'</a>
 			  <div id="subText">Landscape Services, Inc.</div>
 			</div>
 			<nav>
@@ -26,9 +25,9 @@
 		</div>
 	</header> 
 
-	<p class="main">Life's greatest memories begin in your own backyard. Whether it's your child's first steps or a traditional family Barbeque, Monteiro &amp Sons' wants to make your backyard vision, a reality. We offer over 15 years of professional landscape experience and always tailor services to accommodate any customer's requests.
+	<p class="main">Life's greatest memories begin in your own backyard. Whether it's your child's first steps or a traditional family Barbeque, Monteiro &amp; Sons' wants to make your backyard vision, a reality. We offer over 15 years of professional landscape experience and always tailor services to accommodate any customer's requests.
 
-At Monteiro &amp Sons', we accept a wide range of projects using 
+At Monteiro &amp; Sons', we accept a wide range of projects using 
 the best, up-to-date products and patented equipment available. 
 
 From a fresh cut every two weeks to a completely renovated back- yard for your family to enjoy, we are happy to share our knowledge 
@@ -46,7 +45,7 @@ Unlike many of our competitors, we offer professional work at an affordable pric
  		  
 			  <hr>
  	  	  
-			  <div id="copyright"> &copy; Monteiro&ampSons' Landscape Services, Inc. 2015</div>
+			  <div id="copyright"> &copy; Monteiro&amp;Sons' Landscape Services, Inc. 2015</div>
 	  
 	</footer>	
 </html>
