--- a/MAGAZINE/index.html
+++ b/MAGAZINE/index.html
@@ -5,65 +5,22 @@
 		<link rel="stylesheet" type="text/css" href="style.css"/>
 
 	</head>
-	
-<div class="scrollContent">
-	<section id="titlechart">
-		<div id="description">
-			<h1>Simple Pinning</h1>
-			<h2>Two examples of basic pinning.</h2>
-			<ol>
-				<li>A pin of a scene that has a duration will be pinned for the repective ammount of scrolled pixels and then released again.</li>
-				<li>If no duration is defined, the pinned element will never be released unless scrolling back past the trigger position.</li>
-			</ol>
-			<p>
-				Note that the first pin pushes down the following elements. A gap with the size of the scene's duration appears.<br>
-				This can be disabled using the option <code>pushFollowers: false</code>. For scenes with a duration of 0 "<code>pushFollowers</code>" is always disabled.
-			</p>
-			<p>
-				For more information check out the documentation on <a href="../../docs/ScrollMagic.Scene.html#setPin">Scene.setPin()</a>.
-			</p>
-			<a href="#" class="viewsource">view source</a>
-		</div>
-		<script>
-			// init controller
-			var controller = new ScrollMagic.Controller();
-		</script>
-	</section>
-	<section class="demo">
-		<div class="spacer s2"></div>
-		<div id="trigger1" class="spacer s0"></div>
-		<div id="pin1" class="box2 blue">
-			<p>Stay where you are (at least for a while).</p>
-			<a href="#" class="viewsource">view source</a>
-		</div>
-		<div class="spacer s2"></div>
-		<script>
-			$(function () { // wait for document ready
-				// build scene
-				var scene = new ScrollMagic.Scene({triggerElement: "#trigger1", duration: 300})
-								.setPin("#pin1")
-								.addIndicators({name: "1 (duration: 300)"}) // add indicators (requires plugin)
-								.addTo(controller);
-			});
-		</script>
-	</section>
-	<section class="demo">
-		<div class="spacer s2"></div>
-		<div id="trigger2" class="spacer s0"></div>
-		<div id="pin2" class="box2 blue">
-			<p>Take me with you!</p>
-			<a href="#" class="viewsource">view source</a>
-		</div>
-		<div class="spacer s2"></div>
-		<script>
-			$(function () { // wait for document ready
-				// build scene
-				var scene = new ScrollMagic.Scene({triggerElement: "#pin2"})
-								.setPin("#pin2")
-								.addIndicators({name: "2 (duration: 0)"}) // add indicators (requires plugin)
-								.addTo(controller);
-			});
-		</script>
-	</section>			
-	<div class="spacer s_viewport"></div>
+
+	<div class='page'>
+	  <div class='iframe-cover scrolling'></div>
+	  <div class='iframe-wrapper'>
+	    <iframe src='https://www.youtube.com/embed/ZmQQTuxu7m8?autoplay=1&loop=1&controls=0&playsinline=1&playlist=ZmQQTuxu7m8' frameborder="0"></iframe>
+	  </div>
+	</div>
+
+<div class='page page2 full-page'>
+	<h1 class="scrolling">title2</h1>
 </div>
+
+
+<script src='https://code.jquery.com/jquery-2.1.3.js'></script>
+<script src='http://cykod.github.io/ScrollFlight/scroll_flight.js'></script>
+<script src="scroll.js"></script>
+
+</body>
+</html>
