--- a/MAGAZINE/index.html
+++ b/MAGAZINE/index.html
@@ -3,7 +3,9 @@
 	<!DOCTYPE html>
 	<head> 
 		<link rel="stylesheet" type="text/css" href="style.css"/>
-	</head>
+		<script src='https://code.jquery.com/jquery-2.1.3.js'></script>
+		<script src='http://cykod.github.io/ScrollFlight/scroll_flight.js'></script>
+</head>
 
 <div id="parallax">
   
@@ -18,6 +20,7 @@
 	  <h2>[science knows.]</h2>	
       <h3>hemlock woolly adelgid</h3>
     </div>
+	
 </section>
 
 <section>
@@ -32,7 +35,7 @@
 
 <section>
   <div class="parallax-two">
-    <h2>history</h2>
+    <h2 class="subTitle">history</h2>
   </div>
 </section>
 
@@ -58,17 +61,17 @@
 
 <section>
   <div class="block">
-    <p><span class="first-character C">C</span>ultural, regulatory, chemical, and biological controls can reduce the hemlock woolly adelgid’s rate of spread and protect individual trees. Actions such as moving bird feeders away from hemlocks and removing isolated infested trees from a woodlot can help prevent further infestations. State quarantines help prevent movement of infested materials to noninfested areas.</p>
+    <p><span class="first-character C">C</span>ultural, regulatory, chemical, and biological controls can reduce the hemlock woolly adelgid's rate of spread and protect individual trees. Actions such as moving bird feeders away from hemlocks and removing isolated infested trees from a woodlot can help prevent further infestations. State quarantines help prevent movement of infested materials to noninfested areas.</p>
 
 <p>Chemical control options, such as foliar sprays using horticultural oils and insecticidal soaps, are effective when trees can be saturated to ensure that the insecticide comes in contact with the adelgid. Several systemic insecticides have also proven effective on large trees when applied to the soil around the base of the tree or injected directly into the stem <em>(figure 3)</em>. Chemical control is limited to individual tree treatments in readily accessible, nonenvironmentally sensitive areas; it is not feasible in forests, particularly when large numbers of trees are infested. Chemical treatments offer a short-term solution, and applications may need to be repeated.</p>
 
-<p>The best option for managing hemlock woolly adelgid in forests is biological control. Although some of the enemies are native to Eastern North America that feed on hemlock woolly adelgid, they are not effective at reducing populations enough to prevent tree mortality. Therefore, biological control opportunities using natural enemies (predators and pathogens) from the adelgid’s native environment are currently being investigated. Several predators known to feed exclusively on adelgids have been imported from China, Japan, and Western North America and are slowly becoming established throughout the infested region <em>(figure 4)</em>. It will likely take a complex of natural enemies to maintain hemlock woolly adelgid populations below damaging levels. </p>
+<p>The best option for managing hemlock woolly adelgid in forests is biological control. Although some of the enemies are native to Eastern North America that feed on hemlock woolly adelgid, they are not effective at reducing populations enough to prevent tree mortality. Therefore, biological control opportunities using natural enemies (predators and pathogens) from the adelgid's native environment are currently being investigated. Several predators known to feed exclusively on adelgids have been imported from China, Japan, and Western North America and are slowly becoming established throughout the infested region <em>(figure 4)</em>. It will likely take a complex of natural enemies to maintain hemlock woolly adelgid populations below damaging levels. </p>
 
-<p>Pesticide precautionary statement logo.Pesticides used improperly can be injurious to humans, animals, and plants. Follow the directions and heed all precautions on the labels.</p>
-    <p class="line-break margin-top-10"></p>
-    <p class="margin-top-10">
-<em>Note:</em> Some States have restrictions on the use of certain pesticides. Check your State and local regulations. Also, because registrations of pesticides are under constant review by the Federal Environmental Protection Agency, consult your county agricultural agent or State extension specialist to be sure the intended use is still registered.</p>
+<p class="disclaimer">*Pesticides used improperly can be injurious to humans, animals, and plants. Follow the directions and heed all precautions on the labels.Some States have restrictions on the use of certain pesticides. Check your State and local regulations. Also, because registrations of pesticides are under constant review by the Federal Environmental Protection Agency, consult your county agricultural agent or State extension specialist to be sure the intended use is still registered.</p>
   </div>
 </section>
-  
 </div>
+
+
+
+
