--- a/MAGAZINE3/index.html
+++ b/MAGAZINE3/index.html
@@ -2,14 +2,39 @@
 <html lang="en">
 
 <head>
-	
+  <title>the landscape magazine</title>
+  <link rel='stylesheet' href='style.css' type='text/css'/>
+  <script src='https://code.jquery.com/jquery-2.1.3.js'></script>
+  <script src='http://cykod.github.io/ScrollFlight/scroll_flight.js'></script>
+<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>  
 </head>
 
-
-
 <body>
+	<div class="image1">
+		<div id="title">[science knows.]</div>
+	</div>
 	
+	<div class="container2">
+		<div id="box1"><p id="paragraph">Native to Asia, the hemlock woolly adelgid (Adelges tsugae) is a small, aphid-like insect that threatens the health and sustainability of eastern hemlock (Tsuga canadensis) and Carolina hemlock (Tsuga caroliniana) in the Eastern United States. Hemlock woolly adelgid was first reported in the Eastern United States in 1951 near Richmond, Virginia. By 2005, it was established in portions of 16 States from Maine to Georgia, where infestations covered about half of the range of hemlock. Areas of extensive tree mortality and decline are found throughout the infested region, but the impact has been most severe in some areas of Virginia, New Jersey, Pennsylvania, and Connecticut.</p>
+
+<p id="paragraph">Hemlock decline and mortality typically occur within 4 to 10 years of infestation in the insect's northern range, but can occur in as little as 3 to 6 years in its southern range. Other hemlock stressors, including drought, poor site conditions, and insect and disease pests such as elongate hemlock scale (Fiorinia externa), hemlock looper (Lambdina fiscellaria fiscellaria), spruce spider mite (Oligonychus ununguis), hemlock borer (Melanophila fulvogutta), root rot disease (Armillaria mellea), and needlerust (Melampsora parlowii), accelerate the rate and extent of hemlock mortality.</p>
+
+<p id="paragraph">The hemlock woolly adelgid develops and reproduces on all species of hemlock, but only eastern and Carolina hemlock are vulnerable when attacked. The range of eastern hemlock stretches from Nova Scotia to northern Alabama and west to northeastern Minnesota and eastern Kentucky. Carolina hemlock occurs on dry mountain slopes in the southern Appalachians of western Virginia, North and South Carolina, Georgia, and Tennessee. Eastern hemlock is also commonly planted as a tree, shrub, or hedge in ornamental landscapes. At least 274 cultivars of eastern hemlock are known to exist.</p>
+	</div>
 	
+		<div id="box2">goodbye</div>
+	</div>
+	
+	<div class="container3">container3
+	</div>
+	
+	<div class="container4">container4
+	</div>
+	
+	<div class="container5">container5
+	</div>
+
 	
 	<script src="script.js"></script>	
 </body>
