--- a/Magazine3/index.html
+++ b/Magazine3/index.html
@@ -9,8 +9,8 @@
 <nav>
 	<ul>
 		<li><a href="http://ak-hdl.buzzfed.com/static/2014-07/18/8/enhanced/webdr08/anigif_enhanced-buzz-8915-1405685252-4.gif">home</a></li>
-		<li><a href="http://s3-ec.buzzfed.com/static/2013-11/enhanced/webdr07/21/11/anigif_enhanced-buzz-12659-1385050810-20.gif">explore</a></li>
-		<li><a href="http://www.drodd.com/images8/funny-gif/funny-gif28.gif">find</a></li>
+		<li><a href="http://s3-ec.buzzfed.com/static/2013-11/enhanced/webdr07/21/11/anigif_enhanced-buzz-12659-1385050810-20.gif">read</a></li>
+		<li><a href="http://www.drodd.com/images8/funny-gif/funny-gif28.gif">explore</a></li>
 	</ul>
 </nav> 
 
@@ -105,6 +105,16 @@
 <iframe class="video" width="420" height="315"
 src="http://www.youtube.com/embed/yQP0Tv43mxg">
 </iframe>
+</div>
+
+<div class='page'>
+  <div class='iframe-cover scroller'></div>
+  <div class='iframe-wrapper'>
+    <iframe src='https://www.youtube.com/embed/f6CAEbaDTuk?autoplay=1&loop=1&controls=0&playsinline=1&playlist=f6CAEbaDTuk'></iframe>
+  </div>
+
+<div class='title scroller'>
+    <div class='t1'>[science knows.]</div>
 </div>
 
 </body>
