--- a/Magazine3/index.html
+++ b/Magazine3/index.html
@@ -65,7 +65,7 @@
 
 <aside class="pquote2" "quote arrived">
 	<blockquote>
-		<h5>Ovisacs can be readily observed from late fall to early summer on the underside of the outermost branch tips of hemlock trees.</h5>
+		<h4 class="scroller title pquote1" data-arrived="10%">Ovisacs can be readily observed from late fall to early summer on the underside of the outermost branch tips of hemlock trees.</h4>
 	</blockquote>
 </aside>
 
@@ -89,7 +89,7 @@
 
 <aside class="pquote3">
 	<blockquote>
-		<h4>Actions such as moving bird feeders away from hemlocks and removing isolated infested trees from a woodlot can help prevent further infestations.</h4>
+		<h4 class="scroller title pquote1" data-arrived="10%">Actions such as moving bird feeders away from hemlocks and removing isolated infested trees from a woodlot can help prevent further infestations.</h4>
 	</blockquote>
 </aside>
 
@@ -110,12 +110,10 @@ src="http://www.youtube.com/embed/yQP0Tv43mxg">
 <div class='page'>
   <div class='iframe-cover scroller'></div>
   <div class='iframe-wrapper'>
-    <iframe src='https://www.youtube.com/embed/f6CAEbaDTuk?autoplay=1&loop=1&controls=0&playsinline=1&playlist=f6CAEbaDTuk'></iframe>
+
   </div>
 
-<div class='title scroller'>
-    <div class='t1'>[science knows.]</div>
-</div>
+
 
 </body>
 
